--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.6
   dio: ^5.7.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
